[DDING-000] 지원서 상세조회시 파일정보 명세 추가 (#274)